--- a/index.html
+++ b/index.html
@@ -60,34 +60,34 @@
                     <div id='menuBar'>
                         <nav>
                             <div class="dropdown">
-                                <button class="dropbtn">GOTOWE ZESTAWY DO GRY  <i class="fas fa-chevron-down"></i></button>
-                                <div class="dropdown-content">
-                                    <a href="#">Link 1</a>
-                                    <a href="#">Link 2</a>
-                                    <a href="#">Link 3</a>
-                                </div>
+                                        <div class="dropbtn">SPRZĘT  <i class="fas fa-chevron-down"></i></div>
+                                            <div class="dropdown-content">
+                                                    <a href="#">Link 1</a>
+                                                    <a href="#">Link 2</a>
+                                                    <a href="#">Link 3</a>
+                                            </div>
                             </div>
                             <div class="dropdown">
-                                <button class="dropbtn">SPRZĘT  <i class="fas fa-chevron-down"></i></button>
-                                <div class="dropdown-content">
-                                    <a href="#">Link 1</a>
-                                    <a href="#">Link 2</a>
-                                    <a href="#">Link 3</a>
-                                </div>
+                                    <div class="dropbtn">SPRZĘT  <i class="fas fa-chevron-down"></i></div>
+                                        <div class="dropdown-content">
+                                                <a href="#">Link 1</a>
+                                                <a href="#">Link 2</a>
+                                                <a href="#">Link 3</a>
+                                        </div>
                             </div>
                             <div class="dropdown">
-                                <button class="dropbtn">ODZIEŻ  <i class="fas fa-chevron-down"></i></button>
-                                <div class="dropdown-content">
-                                    <a href="#">Link 1</a>
-                                    <a href="#">Link 2</a>
-                                    <a href="#">Link 3</a>
-                                </div>
+                                <div class="dropbtn">ODZIEŻ  <i class="fas fa-chevron-down"></i></div>
+                                    <div class="dropdown-content">
+                                            <a href="#">Link 1</a>
+                                            <a href="#">Link 2</a>
+                                            <a href="#">Link 3</a>
+                                    </div>
                             </div>
                             <div class="dropdown">
-                                <button class="dropbtn">KULKI</button>
+                                    <a href="#"><button class="dropbtn">KULKI</button></a>
                             </div>
                             <div class="dropdown">
-                                <button class="dropbtn">WYPRZEDAŻE</button>
+                                    <a href="#"><button class="dropbtn">WYPRZEDAŻE</button></a>
                             </div>
                         </nav>
                     </div>
