hamburger nav added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                         <div id='cart'>
                             Koszyk
                         </div>
+                        <div class="menuToggle"><i class="fas fa-bars"></i></div>
                     </div>
                     <div id='menuBar'>
                         <nav>
