--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
     <div id='page'>
         <div id='mainProduct'>
             <div id='productPhoto'>
-                <p>Foto</p>
+                    <div class='slider'>
+                        <ul>
+
+                        </ul>
+                    </div>
             </div>
             <div id='productOptions'>
                 <p>Tutaj będzie dużo opcji produktu</p>
@@ -154,7 +158,7 @@
         <div id='footer'>
             <p>Footer</p>
         </div>
-    <script src='.\node_modules\jquery\dist\jquery.min.js'></script>
+    <script src='.\jquery.min.js'></script>
     <script src='script.js'></script>
 </body>
 </html>
