id switched to classes

--- a/index.html
+++ b/index.html
@@ -17,48 +17,48 @@
             <li><i class="fab fa-facebook-f"></i>assassinarms</li>
         </ul>
     </div>
-    <div id='topBarBackground'>
-        <div id="topBarContent">
-            <div id='topBar'>
-                <div id='mainField'>
-                    <div id='logoBar'>
-                        <div id='logoContainer'>
+    <div class='topBarBackground'>
+        <div class="topBarContent">
+            <div class='topBar'>
+                <div class='mainField'>
+                    <div class='logoBar'>
+                        <div class='logoContainer'>
                             <a href="#">
-                                <img id='logo-full' src='https://assassins-arms.com/skins/basic/customer/images/logo.png' alt="Assassins Arms Shop">
+                                    <img class='logo-full' src='https://assassins-arms.com/skins/basic/customer/images/logo.png' alt="Assassins Arms Shop">
                             </a>
                             <a href="#">
-                                <img id='logo-mobile' src='./graphics/logo.png' alt="Assassins Arms Shop">
+                                    <img class='logo-mobile' src='./graphics/logo.png' alt="Assassins Arms Shop">
                             </a>
                         </div>
-                            <form class="searchBar" action="action_page.php">
-                                <input type="text" placeholder="Szukaj..." name="search">
-                                <button id='searchButton' type="submit"><i class="fa fa-search"></i></button>
-                                <button id='showButton' type="button" onclick='showSearch()'><i class="fa fa-search"></i></button>
-                            </form>
-                        <div id='language'>
-                            <div class='dropdown'>
-                                <button class='dropbtn' >
-                                    PL 
-                                    <img src='./graphics/iconfinder_flag-poland_748114.png'>
-                                    <i class="fas fa-chevron-down"></i>
-                                </button>
-                                <div class="dropdown-content">
-                                    <a href="#">
-                                        EN
-                                        <img src='./graphics/iconfinder_flag-united-kingdom_748024.png'>
-                                    </a>
+                                <form class="searchBar" action="action_page.php">
+                                        <input type="text" placeholder="Szukaj..." name="search">
+                                        <button class='searchButton' type="submit"><i class="fa fa-search"></i></button>
+                                        <button class='showButton' type="button" onclick='showSearch()'><i class="fa fa-search"></i></button>
+                                </form>
+                        <div class='language'>
+                                <div class='dropdown'>
+                                        <button class='dropbtn' >
+                                                PL 
+                                                <img src='./graphics/iconfinder_flag-poland_748114.png'>
+                                                <i class="fas fa-chevron-down"></i>
+                                        </button>
+                                        <div class="dropdown-content">
+                                            <a href="#">
+                                                    EN
+                                                    <img src='./graphics/iconfinder_flag-united-kingdom_748024.png'>
+                                            </a>
+                                        </div>
                                 </div>
-                            </div>
                         </div>
-                        <div id='account'>
+                        <div class='account'>
                             Moje konto
                         </div>
-                        <div id='cart'>
+                        <div class='cart'>
                             Koszyk
                         </div>
                         <div class="menuToggle"><i class="fas fa-bars"></i></div>
                     </div>
-                    <div id='menuBar'>
+                    <div class='menuBar'>
                         <nav>
                             <div class="dropdown">
                                         <div class="dropbtn">SPRZĘT  <i class="fas fa-chevron-down"></i></div>
@@ -92,29 +92,29 @@
                             </div>
                         </nav>
                     </div>
-                    <div id='location'>
+                    <div class='location'>
                         <p>Somewhere > Somewhere else </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div id='page'>
-        <div id='mainProduct'>
-            <div id='productPhoto'>
+    <div class='page'>
+        <div class='mainProduct'>
+            <div class='productPhoto'>
                     <div class='slider'>
                         <ul>
 
                         </ul>
                     </div>
             </div>
-            <div id='productOptions'>
+            <div class='productOptions'>
                 <p>Tutaj będzie dużo opcji produktu</p>
             </div>
         </div>
-            <div id='productSuggestions'>
+            <div class='productSuggestions'>
                 <h2>Dobierz do zestawu</h2>
-                <div id='additionalProducts'>
+                <div class='additionalProducts'>
                     <div class='product'>
 
                     </div>
@@ -126,26 +126,26 @@
                     </div>
                 </div>
             </div>
-        <div id='midPage'> 
-            <div id='midPageLeft'>
-                <div id='productInfo'>
+        <div class='midPage'> 
+            <div class='midPageLeft'>
+                <div class='productInfo'>
                     <p>Informacje o produkcie</p>
                 </div>
-                <div id='FAQ'>
+                <div class='FAQ'>
                     <h2>Nasi klienci pytali nas o</h2>
                     <p>różne rzeczy</p>
                 </div>
             </div>
-            <div id='midPageRight'>
+            <div class='midPageRight'>
                 <div id='banner'>
                     <h1>Banner</h1>
                     <p>Usługi serwisowe</p>
                 </div>
             </div>
         </div>
-        <div id='lowerPage'>
+        <div class='lowerPage'>
             <h2>Porady naszego eksperta</h2>
-            <div id='articlesContainer'>
+            <div class='articlesContainer'>
                 <div class='article'>
                     <p>Artykuł 1</p>
                 </div>
@@ -155,7 +155,7 @@
             </div>
         </div>
     </div>
-        <div id='footer'>
+        <div class='footer'>
             <p>Footer</p>
         </div>
     <script src='.\jquery.min.js'></script>
